# Aspose.Page-FOSS-for-Python

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml  setup.py
src/aspose/: __init__.py
src/aspose/page/: __init__.py
testdata/ps/images/: 36145.emf  TestFill Emf 0 Gold.emf
testdata/ps/integration/: PAGEAPP-82.ps  PAGEJAVA-140.eps  PAGEJAVA-146-for-testing.ps  PAGEJAVA-153.ps  PAGEJAVA-218.eps  PAGEJAVA-242.ps  PAGEJAVA-246.ps  PAGEJAVA-271.eps  PAGEJAVA-296.ps  PAGEJAVA-303.ps  PAGEJAVA-31.ps  PAGEJAVA-62.ps  PAGEJAVA-63.ps  PAGEJAVA-64.eps  PAGEJAVA-66.eps  PAGEJAVA-67.eps  PAGEJAVA-73-1.eps  PAGEJAVA-73-2.eps  PAGEJAVA-73-3.eps  PAGEJAVA-73-4.eps  PAGEJAVA-73-5.eps  PAGEJAVA-95-1.ps  (+98 more)
tests/common/: compare_utils.py  output_utils.py  pdf_validator.py  render_model_dump.py  test_utils.py
tests/image/: test_glyph_fill_policy.py  test_raster_output.py  test_xps_raster_integration.py
tests/mcp/: test_handlers.py
tests/pdf/: test_pdf_font_embedding.py  test_pdf_writer_unicode.py
tests/ps/: test_color_ops.py  test_conversion_pipeline.py  test_core_graphics.py  test_font_cache.py  test_font_types.py  test_image_filters.py  test_image_to_eps.py  test_interpreter_alias.py  test_interpreter_engine.py  test_output_metadata.py  test_pdf_writer.py  test_ps_creation_editing.py  test_ps_raster_integration.py  test_text_ops.py  test_type1_parser.py  test_xmp_metadata.py
tests/tools/: pdf_render.py  pdf_validate.py
tests/xps/: test_print_tickets.py  test_xps_creation_editing.py  test_xps_integration.py  test_xps_output_rules.py  test_xps_pipeline.py
(+552 files in other folders)
