[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aspose-page-foss"
version = "0.1.0"
description = "Aspose.Page FOSS for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pypdf", "pypdfium2", "Pillow"]

[dependency-groups]
dev = ["pypdf", "pypdfium2", "Pillow"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["aspose*"]

[tool.uv]
default-groups = ["dev"]
